fixed tag wrap, added tooltip for recipe import

--- a/components/layout/NavBar.module.css
+++ b/components/layout/NavBar.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100%;
   height: 4.5rem;
-  z-index: 1;
+  z-index: 10;
   padding: 1rem;
   background: var(--blue);
   color: #ffff;
@@ -79,6 +79,13 @@
 
 .searchnav div input:focus-within {
   border: 1px solid #666;
+}
+
+@media (hover: none) {
+  .container nav span:hover,
+  .searchbutton:hover {
+    color: inherit;
+  }
 }
 
 @media (max-width: 660px) {
